--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.2",
     "react-markdown": "^5.0.3",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "validator": "^13.5.2",
     "web-vitals": "^0.2.4"
   },
